<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jaapsblog.nl</string>

    <string name="list_main_1">Pages</string>
    <string name="list_main_2">Blog Items</string>
    <string name="list_main_3">Replies</string>

    <string name="url_login">http://dev.jaapsblog.nl/login</string>
    <string name="url_logout">http://dev.jaapsblog.nl/logout</string>

    <string name="url_page_index">http://dev.jaapsblog.nl/admin/page/index</string>
    <string name="url_page_edit">http://dev.jaapsblog.nl/admin/page/edit</string>
    <string name="url_page_delete">http://dev.jaapsblog.nl/admin/page/delete</string>

    <string name="url_blog_index">http://dev.jaapsblog.nl/admin/blog/index</string>
    <string name="url_blog_edit">http://dev.jaapsblog.nl/admin/blog/edit</string>
    <string name="url_blog_delete">http://dev.jaapsblog.nl/admin/blog/delete</string>

    <string name="url_blog_reply_index">http://dev.jaapsblog.nl/admin/blog/index-reply</string>
    <string name="url_blog_reply_delete">http://dev.jaapsblog.nl/admin/blog/delete-reply</string>

    <string name="button_login">Login</string>
    <string name="button_save">Save</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_title">Title</string>
    <string name="hint_subtitle">Subtitle</string>
    <string name="hint_date">YYYY-MM-DD</string>
    <string name="hint_amazon_item_id">Amazon item ID</string>
    <string name="hint_label">Label</string>
    <string name="hint_url_string">URL String</string>
    <string name="hint_lead">Lead</string>
    <string name="hint_content">Content</string>
    <string name="hint_meta_title">META Title</string>
    <string name="hint_meta_description">META Description</string>
    <string name="hint_meta_keywords">META Keywords</string>

    <string name="field_label_title">Title</string>
    <string name="field_label_subtitle">Subtitle</string>
    <string name="field_label_date">Date</string>
    <string name="field_label_rating">Rating</string>
    <string name="field_label_amazon_item_id">Amazon Item ID</string>
    <string name="field_label_label">Label</string>
    <string name="field_label_url_string">URL String</string>
    <string name="field_label_route">Route</string>
    <string name="field_label_lead">Lead</string>
    <string name="field_label_content">Content</string>
    <string name="field_label_status">Status</string>
    <string name="field_label_category">Category</string>
    <string name="field_label_priority">Priority</string>
    <string name="field_label_meta_title">META Title</string>
    <string name="field_label_meta_description">META Description</string>
    <string name="field_label_meta_keywords">META Keywords</string>

    <string name="field_value_id">0</string>
</resources>
