<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:id="@+id/form"
                      android:layout_height="wrap_content"
                      android:paddingLeft="10dp"
                      android:paddingTop="20dp"
                      android:paddingRight="10dp"
                      android:paddingBottom="20dp"
                      android:padding="10dp"
                      android:background="#ececec">
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id"
                    android:enabled="false"
                    android:visibility="gone"
                    android:text="@string/field_value_id"
                    android:inputType="text"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_title"
                    android:textSize="16dp"
                    android:padding="2dp"
                    android:gravity="left"
                    />
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:singleLine="true"
                    android:autoText="false"
                    android:hint="@string/hint_title"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_label"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/hint_label"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_url_string"
                    android:textSize="16dp"
                    android:padding="2dp"
                    android:gravity="left"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/url_string"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/hint_url_string"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_route"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <Spinner
                    android:id="@+id/route"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_content"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/content"
                    android:inputType="text"
                    android:hint="@string/hint_content"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_status"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <Spinner
                    android:id="@+id/status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_priority"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <Spinner
                    android:id="@+id/priority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_meta_title"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/meta_title"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/hint_meta_title"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_meta_description"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/meta_description"
                    android:inputType="text"
                    android:hint="@string/hint_meta_description"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_meta_keywords"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:padding="2dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/meta_keywords"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/hint_meta_keywords"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    android:id="@+id/submit"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginTop="8dp"
                    android:onClick="submitForm"/>
        </LinearLayout>
</ScrollView>